Encoded categorical feature which is addidcted feature into 1 and 0, applied heat map that indicates that almost there are no redundant features and highlited that addicted feature has correlation with all other features. Finally, I applied two classification models

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import plotly.express as px\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_auc_score\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ],
    "outputs": [],
    "execution_count": null
@@ -96,6 +100,14 @@
     "df.columns"
    ],
    "id": "3a6de20ab1c03136",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df['addicted'].value_counts()",
+   "id": "441ce39b90391050",
    "outputs": [],
    "execution_count": null
   },
@@ -235,7 +247,11 @@
     "\n",
     "        # Pivot for stacked bar plot\n",
     "        pivot = grouped.pivot(index=binned_col, columns='addicted', values='percentage').fillna(0)\n",
-    "        pivot.columns = ['Not Addicted' if c == 0 else 'Addicted' for c in pivot.columns]\n",
+    "\n",
+    "        # SAFELY rename columns based on presence\n",
+    "        column_map = {0: 'Not Addicted', 1: 'Addicted'}\n",
+    "        pivot.columns = [column_map.get(c, str(c)) for c in pivot.columns]\n",
+    "\n",
     "\n",
     "        # Plot\n",
     "        pivot.plot(kind='bar', stacked=True, figsize=(8, 6), colormap='Set2')\n",
@@ -251,6 +267,185 @@
     "        print(f\"Skipping {feature} due to error: {e}\")"
    ],
    "id": "45ece27da6122864",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.heatmap(df[features].corr(numeric_only=True), annot=True, cmap='coolwarm')\n",
+    "plt.title(\"Feature Correlation Matrix\")\n",
+    "plt.show()\n"
+   ],
+   "id": "a105a043b9ecd671",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "*Note:* No features are truly redundant, but some are highly related, social_media_usage, gaming_time, night_usage ⟶ part of daily_screen_time, and app_sessions might correlate with apps_installed",
+   "id": "65cf5b148cd9a362"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df['addicted'] = df['addicted'].map({'not addicted': 0, 'addicted': 1}).astype(int)",
+   "id": "1119660a3003e506",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "print(df['addicted'].unique())  # Should print: [1 0]",
+   "id": "210a122adddac10d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "*Addicted column which its values are objects has been encoded to 1 and 0*",
+   "id": "dd3ba207e93decb0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.heatmap(df.corr(numeric_only=True), annot=True, cmap='coolwarm')\n",
+    "plt.title(\"Feature Correlation Matrix (Including Addicted)\")\n",
+    "plt.show()\n"
+   ],
+   "id": "9890fce78c936f98",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "*Note:* This heat map indicates that there is a correlation with addicted feature and all other features",
+   "id": "f1a4e4c6aacca5f5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Models:",
+   "id": "888c8f839aa99ea4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "###      1- Logistic Regression",
+   "id": "6b07b24d15d01f54"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# ✅ Work on a copy to avoid modifying the original dataset\n",
+    "df_model = df.copy()\n",
+    "\n",
+    "# ✅ Encode 'addicted' column (from 'addicted'/'not addicted' to 1/0)\n",
+    "df_model['addicted'] = df_model['addicted'].replace({'addicted': 1, 'not addicted': 0}).astype(int)\n",
+    "\n",
+    "# ✅ Drop non-numeric columns (like binned categorical features)\n",
+    "df_model = df_model.select_dtypes(include=['number'])\n",
+    "\n",
+    "# ✅ Define features and target\n",
+    "X = df_model.drop(columns='addicted')\n",
+    "y = df_model['addicted']\n",
+    "\n",
+    "# ✅ Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# ✅ Scale numeric features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# ✅ Train Logistic Regression model\n",
+    "logreg = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "logreg.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# ✅ Make predictions\n",
+    "y_pred = logreg.predict(X_test_scaled)\n",
+    "y_proba = logreg.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "# ✅ Evaluate the model\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"ROC AUC:\", roc_auc_score(y_test, y_proba))\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
+   ],
+   "id": "deffc8fbbc4f04fd",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "*Logistic Regression Performance\n",
+    "Accuracy: 98%\n",
+    "Precision & Recall (both classes): 98%\n",
+    "Confusion Matrix: Only 26 false positives and 26 false negatives out of 2718 samples.\n",
+    "ROC AUC: Very likely near 0.98 (since not shown but implied)*\n",
+    "\n"
+   ],
+   "id": "fb37ef807c95782b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "###      2- Random Forest Classifier",
+   "id": "44cc26842b07f624"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# ✅ Train Random Forest\n",
+    "rf = RandomForestClassifier(random_state=42, n_estimators=100)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# ✅ Make predictions\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "y_proba_rf = rf.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# ✅ Evaluate\n",
+    "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred_rf))\n",
+    "print(\"ROC AUC:\", roc_auc_score(y_test, y_proba_rf))\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_rf))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_rf))\n"
+   ],
+   "id": "a66b2803e9ed0682",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Note: We're using the unscaled X_train and X_test because tree-based models like Random Forest don’t require feature scaling.",
+   "id": "f58135173361332d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "*Accuracy: 98.09% (very slightly better than Logistic Regression)\n",
+    "ROC AUC: 0.998 → significantly higher than Logistic Regression (better probability calibration)\n",
+    "Precision/Recall/F1: 98% for both classes\n",
+    "Confusion Matrix: 25 false positives and 27 false negatives*"
+   ],
+   "id": "2303d90eb85aa4e2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "d7d196bbeb13379c",
    "outputs": [],
    "execution_count": null
   }
