--- a/main.ipynb
+++ b/main.ipynb
@@ -226,45 +226,41 @@
     "for feature in features:\n",
     "    binned_col = f'{feature}_binned'\n",
     "\n",
-    "    try:\n",
-    "        unique_vals = df[feature].nunique()\n",
+    "    unique_vals = df[feature].nunique()\n",
     "\n",
-    "        # Choose binning strategy based on value spread\n",
-    "        if unique_vals >= 10:\n",
-    "            # Quantile binning\n",
-    "            bin_edges = pd.qcut(df[feature], q=5, retbins=True, duplicates='drop')[1]\n",
-    "            num_bins = len(bin_edges) - 1\n",
-    "            labels = ['Very Low', 'Low', 'Medium', 'High', 'Very High'][:num_bins]\n",
-    "            df[binned_col] = pd.qcut(df[feature], q=num_bins, labels=labels)\n",
-    "        else:\n",
-    "            # Equal-width binning for low-uniqueness features\n",
-    "            df[binned_col] = pd.cut(df[feature], bins=5, labels=['Very Low', 'Low', 'Medium', 'High', 'Very High'])\n",
+    "    # Choose binning strategy based on value spread\n",
+    "    if unique_vals >= 10:\n",
+    "        # Quantile binning\n",
+    "        bin_edges = pd.qcut(df[feature], q=5, retbins=True, duplicates='drop')[1]\n",
+    "        num_bins = len(bin_edges) - 1\n",
+    "        labels = ['Very Low', 'Low', 'Medium', 'High', 'Very High'][:num_bins]\n",
+    "        df[binned_col] = pd.qcut(df[feature], q=num_bins, labels=labels)\n",
+    "    else:\n",
+    "        # Equal-width binning for low-uniqueness features\n",
+    "        df[binned_col] = pd.cut(df[feature], bins=5, labels=['Very Low', 'Low', 'Medium', 'High', 'Very High'])\n",
     "\n",
-    "        # Group and calculate percentage with observed=True to suppress warnings\n",
-    "        grouped = df.groupby([binned_col, 'addicted'], observed=True).size().reset_index(name='count')\n",
-    "        total_per_bin = grouped.groupby(binned_col, observed=True)['count'].transform('sum')\n",
-    "        grouped['percentage'] = grouped['count'] / total_per_bin * 100\n",
+    "    # Group and calculate percentage with observed=True to suppress warnings\n",
+    "    grouped = df.groupby([binned_col, 'addicted'], observed=True).size().reset_index(name='count')\n",
+    "    total_per_bin = grouped.groupby(binned_col, observed=True)['count'].transform('sum')\n",
+    "    grouped['percentage'] = grouped['count'] / total_per_bin * 100\n",
     "\n",
-    "        # Pivot for stacked bar plot\n",
-    "        pivot = grouped.pivot(index=binned_col, columns='addicted', values='percentage').fillna(0)\n",
+    "    # Pivot for stacked bar plot\n",
+    "    pivot = grouped.pivot(index=binned_col, columns='addicted', values='percentage').fillna(0)\n",
     "\n",
-    "        # SAFELY rename columns based on presence\n",
-    "        column_map = {0: 'Not Addicted', 1: 'Addicted'}\n",
-    "        pivot.columns = [column_map.get(c, str(c)) for c in pivot.columns]\n",
+    "    # SAFELY rename columns based on presence\n",
+    "    column_map = {0: 'Not Addicted', 1: 'Addicted'}\n",
+    "    pivot.columns = [column_map.get(c, str(c)) for c in pivot.columns]\n",
     "\n",
     "\n",
-    "        # Plot\n",
-    "        pivot.plot(kind='bar', stacked=True, figsize=(8, 6), colormap='Set2')\n",
-    "        plt.title(f'Addiction Percentage by {feature.replace(\"_\", \" \").title()}')\n",
-    "        plt.xlabel(feature.replace('_', ' ').title())\n",
-    "        plt.ylabel('Percentage')\n",
-    "        plt.legend(title='Addiction Status')\n",
-    "        plt.xticks(rotation=30)\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Skipping {feature} due to error: {e}\")"
+    "    # Plot\n",
+    "    pivot.plot(kind='bar', stacked=True, figsize=(8, 6), colormap='Set2')\n",
+    "    plt.title(f'Addiction Percentage by {feature.replace(\"_\", \" \").title()}')\n",
+    "    plt.xlabel(feature.replace('_', ' ').title())\n",
+    "    plt.ylabel('Percentage')\n",
+    "    plt.legend(title='Addiction Status')\n",
+    "    plt.xticks(rotation=30)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ],
    "id": "45ece27da6122864",
    "outputs": [],
@@ -344,36 +340,36 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# ✅ Work on a copy to avoid modifying the original dataset\n",
+    "# Work on a copy to avoid modifying the original dataset\n",
     "df_model = df.copy()\n",
     "\n",
-    "# ✅ Encode 'addicted' column (from 'addicted'/'not addicted' to 1/0)\n",
+    "# Encode 'addicted' column (from 'addicted'/'not addicted' to 1/0)\n",
     "df_model['addicted'] = df_model['addicted'].replace({'addicted': 1, 'not addicted': 0}).astype(int)\n",
     "\n",
-    "# ✅ Drop non-numeric columns (like binned categorical features)\n",
+    "# Drop non-numeric columns (like binned categorical features)\n",
     "df_model = df_model.select_dtypes(include=['number'])\n",
     "\n",
-    "# ✅ Define features and target\n",
+    "# Define features and target\n",
     "X = df_model.drop(columns='addicted')\n",
     "y = df_model['addicted']\n",
     "\n",
-    "# ✅ Train-test split\n",
+    "# Train-test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# ✅ Scale numeric features\n",
+    "# ىScale numeric features\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# ✅ Train Logistic Regression model\n",
+    "# Train Logistic Regression model\n",
     "logreg = LogisticRegression(random_state=42, max_iter=1000)\n",
     "logreg.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# ✅ Make predictions\n",
+    "# Make predictions\n",
     "y_pred = logreg.predict(X_test_scaled)\n",
     "y_proba = logreg.predict_proba(X_test_scaled)[:, 1]\n",
     "\n",
-    "# ✅ Evaluate the model\n",
+    "# Evaluate the model\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"ROC AUC:\", roc_auc_score(y_test, y_proba))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
@@ -406,15 +402,15 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# ✅ Train Random Forest\n",
+    "# Train Random Forest\n",
     "rf = RandomForestClassifier(random_state=42, n_estimators=100)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# ✅ Make predictions\n",
+    "# Make predictions\n",
     "y_pred_rf = rf.predict(X_test)\n",
     "y_proba_rf = rf.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# ✅ Evaluate\n",
+    "# Evaluate\n",
     "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred_rf))\n",
     "print(\"ROC AUC:\", roc_auc_score(y_test, y_proba_rf))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_rf))\n",
