Each model has been separated and Visualisations have been added after each model, with model comparison at the end

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -210,13 +210,13 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "source": [
     "scaler = StandardScaler()\n",
     "X_train.loc[:, num_cols] = scaler.fit_transform(X_train[num_cols])\n",
     "X_test.loc[:,  num_cols] = scaler.transform(X_test[num_cols])"
    ],
+   "metadata": {},
    "id": "6bf4d5694ea2b714",
    "outputs": [],
    "execution_count": null
@@ -224,56 +224,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Build models"
+    "# Helper function for model evaluation"
    ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5d78b12eb52e8faf"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "lin = LinearRegression()\n",
-    "\n",
-    "ridge = RidgeCV(alphas=np.logspace(-3, 3, 25), cv=5)  # searches for the best α on a grid and picks the one that minimises cross-validated error\n",
-    "\n",
-    "rf = RandomForestRegressor(n_estimators=300, random_state=42)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e5226d3d5bf48c79",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "lin.fit(X_train, y_train)\n",
-    "ridge.fit(X_train, y_train)\n",
-    "rf.fit(X_train, y_train)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "675bf7650ee54f32",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "y_pred_lin = lin.predict(X_test)\n",
-    "y_pred_ridge = ridge.predict(X_test)\n",
-    "y_pred_rf = rf.predict(X_test)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e63c96980dfdc24a",
-   "outputs": [],
-   "execution_count": null
+   "metadata": {},
+   "id": "helper_function"
   },
   {
    "cell_type": "code",
@@ -283,39 +237,237 @@
     "    rmse = math.sqrt(mean_squared_error(y_true, y_pred))\n",
     "    r2 = r2_score(y_true, y_pred)\n",
     "    print(f'{name:<15s}  MAE: {mae:.3f}   RMSE: {rmse:.3f}   R²: {r2:.3f}')\n",
-    "    return {'MAE': mae, 'RMSE': rmse, 'R2': r2}\n",
-    "\n",
-    "print('\\n--- Test‑set performance ---')\n",
-    "evaluate(y_test, y_pred_lin, 'Linear Regression')\n",
-    "evaluate(y_test, y_pred_ridge, 'Ridge Regression')\n",
-    "evaluate(y_test, y_pred_rf, 'Random Forest')\n",
-    "\n",
-    "print(f\"\\nRidge alpha used: {ridge.alpha_:.4f}\")"
+    "    return {'MAE': mae, 'RMSE': rmse, 'R2': r2}"
    ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b0199f672b8ebd",
+   "metadata": {},
+   "id": "eval_function",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model 1: Linear Regression"
+   ],
+   "metadata": {},
+   "id": "linear_regression_header"
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "lin = LinearRegression()\n",
+    "lin.fit(X_train, y_train)\n",
+    "y_pred_lin = lin.predict(X_test)\n",
+    "lin_metrics = evaluate(y_test, y_pred_lin, 'Linear Regression')"
+   ],
+   "metadata": {},
+   "id": "linear_regression_model",
    "outputs": [],
    "execution_count": null
   },
   {
    "cell_type": "code",
    "source": [
-    "importances = rf.feature_importances_\n",
-    "feat_imp = pd.Series(importances, index=X.columns).sort_values()\n",
-    "\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.barh(feat_imp.index, feat_imp.values)\n",
-    "plt.xlabel('Importance')\n",
-    "plt.title('Random‑Forest Feature Importances')\n",
+    "# Visualize Linear Regression predictions vs actual values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_test, y_pred_lin, alpha=0.5)\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
+    "plt.xlabel('Actual Stress Level')\n",
+    "plt.ylabel('Predicted Stress Level')\n",
+    "plt.title('Linear Regression: Actual vs. Predicted Stress Levels')\n",
+    "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Visualize the coefficients\n",
+    "coef = pd.Series(lin.coef_, index=X.columns).sort_values(ascending=False)\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "coef.plot(kind='bar')\n",
+    "plt.title('Linear Regression Coefficients')\n",
+    "plt.xlabel('Features')\n",
+    "plt.ylabel('Coefficient Value')\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.grid(axis='y')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "901aefd0ef10df0d",
+   "metadata": {},
+   "id": "linear_regression_viz",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model 2: Ridge Regression"
+   ],
+   "metadata": {},
+   "id": "ridge_regression_header"
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "ridge = RidgeCV(alphas=np.logspace(-3, 3, 25), cv=5)  # searches for the best α on a grid\n",
+    "ridge.fit(X_train, y_train)\n",
+    "y_pred_ridge = ridge.predict(X_test)\n",
+    "ridge_metrics = evaluate(y_test, y_pred_ridge, 'Ridge Regression')\n",
+    "print(f\"Ridge alpha used: {ridge.alpha_:.4f}\")"
+   ],
+   "metadata": {},
+   "id": "ridge_regression_model",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Visualize Ridge Regression predictions vs actual values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_test, y_pred_ridge, alpha=0.5)\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
+    "plt.xlabel('Actual Stress Level')\n",
+    "plt.ylabel('Predicted Stress Level')\n",
+    "plt.title('Ridge Regression: Actual vs. Predicted Stress Levels')\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Visualize the coefficients\n",
+    "ridge_coef = pd.Series(ridge.coef_, index=X.columns).sort_values(ascending=False)\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "ridge_coef.plot(kind='bar')\n",
+    "plt.title('Ridge Regression Coefficients')\n",
+    "plt.xlabel('Features')\n",
+    "plt.ylabel('Coefficient Value')\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.grid(axis='y')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {},
+   "id": "ridge_regression_viz",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model 3: Random Forest"
+   ],
+   "metadata": {},
+   "id": "random_forest_header"
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "rf = RandomForestRegressor(n_estimators=300, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "rf_metrics = evaluate(y_test, y_pred_rf, 'Random Forest')"
+   ],
+   "metadata": {},
+   "id": "random_forest_model",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Visualize Random Forest predictions vs actual values\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(y_test, y_pred_rf, alpha=0.5)\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
+    "plt.xlabel('Actual Stress Level')\n",
+    "plt.ylabel('Predicted Stress Level')\n",
+    "plt.title('Random Forest: Actual vs. Predicted Stress Levels')\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Visualize feature importances\n",
+    "importances = rf.feature_importances_\n",
+    "feat_imp = pd.Series(importances, index=X.columns).sort_values(ascending=False)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "feat_imp.plot(kind='bar')\n",
+    "plt.title('Random Forest Feature Importances')\n",
+    "plt.xlabel('Features')\n",
+    "plt.ylabel('Importance')\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.grid(axis='y')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {},
+   "id": "random_forest_viz",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model Comparison"
+   ],
+   "metadata": {},
+   "id": "model_comparison_header"
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Create a dataframe to compare models\n",
+    "models = ['Linear Regression', 'Ridge Regression', 'Random Forest']\n",
+    "metrics = ['MAE', 'RMSE', 'R2']\n",
+    "comparison = pd.DataFrame(index=models, columns=metrics)\n",
+    "comparison.loc['Linear Regression'] = pd.Series(lin_metrics)\n",
+    "comparison.loc['Ridge Regression'] = pd.Series(ridge_metrics)\n",
+    "comparison.loc['Random Forest'] = pd.Series(rf_metrics)\n",
+    "comparison"
+   ],
+   "metadata": {},
+   "id": "model_comparison_df",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Visualize model comparison\n",
+    "fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "\n",
+    "# MAE comparison\n",
+    "axs[0].bar(models, comparison['MAE'])\n",
+    "axs[0].set_title('Mean Absolute Error')\n",
+    "axs[0].set_ylabel('MAE')\n",
+    "axs[0].set_xticklabels(models, rotation=45)\n",
+    "axs[0].grid(axis='y')\n",
+    "\n",
+    "# RMSE comparison\n",
+    "axs[1].bar(models, comparison['RMSE'])\n",
+    "axs[1].set_title('Root Mean Squared Error')\n",
+    "axs[1].set_ylabel('RMSE')\n",
+    "axs[1].set_xticklabels(models, rotation=45)\n",
+    "axs[1].grid(axis='y')\n",
+    "\n",
+    "# R2 comparison\n",
+    "axs[2].bar(models, comparison['R2'])\n",
+    "axs[2].set_title('R² Score')\n",
+    "axs[2].set_ylabel('R²')\n",
+    "axs[2].set_xticklabels(models, rotation=45)\n",
+    "axs[2].grid(axis='y')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {},
+   "id": "model_comparison_viz",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "21bd89999c797705",
    "outputs": [],
    "execution_count": null
   }
